Prevents the box container from overflowing once the submit story tab slides down

--- a/css/site.css
+++ b/css/site.css
@@ -162,6 +162,7 @@ form > hr {
 .box {
   width: 85vw;
   height: 85vh;
+  overflow: auto;
 }
 
 span {
